--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -67,7 +67,7 @@
           </h1>
           <p>
             An e-commerce website is one that allows people to buy and sell physical goods, services, and digital products over the internet rather than at a brick-and-mortar location. Through an e-commerce website, a business can process orders, accept payments, manage shipping and logistics, and provide customer service.
-          </p>
+          </p>  <br> <br>
          
         </div>
        
@@ -84,6 +84,7 @@
 
 
 
+  <div class="bg-color">   <br>
 
 
     <div class="categories" id="product">
@@ -108,7 +109,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> <br>
 
     <div class="small-container">
       <h2 class="title">Featured Products</h2>
@@ -287,6 +288,16 @@
     </div>
 
 
+
+
+
+
+
+
+
+  </div>
+
+   
 
     <div class="account-page" id="account">
       <div class="container">
